--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,14 +76,14 @@
 			</div>
 			<div class="form-group">
 				<label for="email">Email</label>
-				<input type="text" placeholder="Email" class="form-control">
+				<input type="text" placeholder="Email" [(ngModel)]="email" class="form-control">
 			</div>
 			<div class="form-group">
 				<label for="phone">Phone</label>
 				<input type="number" class="form-control" placeholder="Phone Number">
 			</div>
 			<div class="form-group">
-				<button class="btn btn-primary" type="submit">Confirm</button>
+				<button class="btn btn-primary" type="submit" (click)="sendEmail(email)">Confirm</button>
 			</div>
 		</modal-body>
 		<modal-footer [show-default-buttons]="true"></modal-footer>
